[package]
name = "wevm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
dyn-clone = "1.0.10"
jni = "0.21.0"
wasmi = "0.23.0"

[dev-dependencies]
wat = "1"

[lib]
crate_type = ["cdylib"]
