[package]
name = "wevm"
version = "0.2.0-rc1"
edition = "2021"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Waves Enterprise Virtual Machine for WASM smart-contracts"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/waves-enterprise/wevm"
repository = "https://github.com/waves-enterprise/wevm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = "0.2.0"
convert_case = "0.6.0"
dyn-clone = "1.0.10"
jni = "0.21.0"
wasmi = "0.23.0"

[dev-dependencies]
jni = { version = "0.21.0", features = ["invocation"] }
wat = "1"

[lib]
crate_type = ["cdylib", "rlib"]

[features]
jvm = []
