[package]
name = "wevm-core"
version = "0.3.2"
edition = "2021"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Waves Enterprise Virtual Machine for WASM smart-contracts"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/waves-enterprise/wevm"
repository = "https://github.com/waves-enterprise/wevm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["proc-macro"]

[dependencies]
base58 = "0.2.0"
blake2 = "0.10"
jni = "0.21.0"
sha2 = "0.10"
sha3 = "0.10"
wasmi = "0.31.2"
wevm-proc-macro = { version = "0.1.0", path = "proc-macro" }

[dev-dependencies]
jni = { version = "0.21.0", features = ["invocation"] }
wat = "1"

[lib]
name = "wevm"
crate_type = ["cdylib", "rlib"]

[features]
default = ["jvm"]
jvm = []
bindings = []
