[package]
name = "wevm-core"
version = "0.4.1"
edition = "2021"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Waves Enterprise Virtual Machine for WASM smart-contracts"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/waves-enterprise/wevm"
repository = "https://github.com/waves-enterprise/wevm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["proc-macro"]

[dependencies]
base58 = { version = "0.2.0", optional = true }
blake2 = { version = "0.10", optional = true }
env_logger = { version = "0.11.3", optional = true }
jni = { version = "0.21.0", optional = true }
log = { version = "0.4.21", optional = true }
sha2 = { version = "0.10", optional = true }
sha3 = { version = "0.10", optional = true }
wasmi = { version = "0.31.2", optional = true }
wevm-proc-macro = { version = "0.1.0", path = "proc-macro" }

[dev-dependencies]
jni = { version = "0.21.0", features = ["invocation"] }
wat = "1"

[lib]
name = "wevm"
crate_type = ["cdylib", "rlib"]

[features]
default = ["jvm"]
jvm = ["dep:base58", "dep:blake2", "dep:env_logger", "dep:jni", "dep:log", "dep:sha2", "dep:sha3", "dep:wasmi"]
bindings = []
